data/all_generated_tests/raw_wast_tests/loop_IncorrectConditionEvaluation_746.wast
;; 7. **Test Description**: Create a loop with a `br_if` instruction contingent on multiple-bit-wise checks (AND/OR operations). Verify proper loop execution and termination.    - **Constraint**: Validate compound condition evaluations in the `br_if` instruction for correct execution and termination of the loop.    - **Incorrect Condition Evaluation**: Misinterpretation in handling compound conditions in branch evaluations is tested here.

(assert_invalid
  (module 
    (func $compound-br_if
      (loop (result i32)
        (i32.const 1)
        (i32.const 2)
        (i32.and)
        (i32.const 0)
        (br_if 0)
        (i32.const 0)
      )
    )
  )
  "type mismatch"
)